# libtorch_cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: check_files.cmake  depencency_install.cmake  fetch_mnist.cmake  find_gz_extractor.cmake
include/: config.h.in  config.hpp
include/db/: connector.hpp
include/db/access/: measurement.hpp  raw_measurement.hpp
models/output/: model.pt
scripts/dependencies/: cassandra-driver.py  libtorch-install.py
scripts/models/: create_restnet18.py
scripts/ocid/: download-opencellid.py
src/: main.cpp  pca_k-means.cpp
src/basics/: libtorch.cpp
src/db/: connector.cpp  db_test.cpp
src/db/access/: measurement.cpp  raw_measurement.cpp
src/unsupervised/: pca.cpp  pca_k-means.cpp
test/db/: db_test.cpp
test/db/access/: insert_csv.cpp  insert_test.cpp
